--- a/StudentProjectAnnotation/.settings/org.eclipse.core.resources.prefs
+++ b/StudentProjectAnnotation/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/student/index.jsp=UTF-8
+encoding//WebContent/WEB-INF/student/listSubject.jsp=UTF-8
